// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ParagraphBlock renders correctly 1`] = `
<Text
  style={
    Object {
      "marginHorizontal": 16,
    }
  }
>
  Some text
</Text>
`;

exports[`ParagraphBlock renders correctly using bold prop 1`] = `
<Text
  style={
    Object {
      "fontSize": 20,
      "fontWeight": "bold",
      "lineHeight": 26,
      "marginHorizontal": 10,
      "textAlign": "center",
    }
  }
>
  Some text
</Text>
`;
